Feature: New component for rabbitmq
Now, exists:
- Service for RabbitMQ
- Producer and Consumer of RabbitMQ

Fixed:
- Dependencies with the other microservice.

Result:
- Now you can send a message from a microservice to another microservice. For the moment is activated  helper_service and evaluation_service